--- a/notebook/nuga_bank_etl.ipynb
+++ b/notebook/nuga_bank_etl.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "bffb8bf7",
    "metadata": {},
    "outputs": [],
@@ -179,103 +179,269 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "564124ae",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning And Transformation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f66ddcfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Transaction_Date',\n",
+       " 'Amount',\n",
+       " 'Transaction_Type',\n",
+       " 'Customer_Name',\n",
+       " 'Customer_Address',\n",
+       " 'Customer_City',\n",
+       " 'Customer_State',\n",
+       " 'Customer_Country',\n",
+       " 'Company',\n",
+       " 'Job_Title',\n",
+       " 'Email',\n",
+       " 'Phone_Number',\n",
+       " 'Credit_Card_Number',\n",
+       " 'IBAN',\n",
+       " 'Currency_Code',\n",
+       " 'Random_Number',\n",
+       " 'Category',\n",
+       " 'Group',\n",
+       " 'Is_Active',\n",
+       " 'Last_Updated',\n",
+       " 'Description',\n",
+       " 'Gender',\n",
+       " 'Marital_Status']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuga_bank_df.columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6366ee2",
+   "id": "5b8926bc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "findspark not available, proceeding without it\n",
-      "Stopped existing Spark context\n",
-      "Error creating Spark session: 'JavaPackage' object is not callable\n",
-      "Error creating Spark session: 'JavaPackage' object is not callable\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'JavaPackage' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 38\u001b[39m\n\u001b[32m     37\u001b[39m sc = SparkContext(conf=conf)\n\u001b[32m---> \u001b[39m\u001b[32m38\u001b[39m spark = \u001b[43mSparkSession\u001b[49m\u001b[43m(\u001b[49m\u001b[43msc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     39\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSpark version: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mspark.version\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\ProgramData\\anaconda3\\envs\\pyspark_env\\Lib\\site-packages\\pyspark\\sql\\session.py:635\u001b[39m, in \u001b[36mSparkSession.__init__\u001b[39m\u001b[34m(self, sparkContext, jsparkSession, options)\u001b[39m\n\u001b[32m    633\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m jsparkSession \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    634\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[32m--> \u001b[39m\u001b[32m635\u001b[39m         \u001b[43mjSparkSessionClass\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgetDefaultSession\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m.isDefined()\n\u001b[32m    636\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m jSparkSessionClass.getDefaultSession().get().sparkContext().isStopped()\n\u001b[32m    637\u001b[39m     ):\n\u001b[32m    638\u001b[39m         jsparkSession = jSparkSessionClass.getDefaultSession().get()\n",
-      "\u001b[31mTypeError\u001b[39m: 'JavaPackage' object is not callable",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 44\u001b[39m\n\u001b[32m     42\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mError creating Spark session: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     43\u001b[39m \u001b[38;5;66;03m# Fallback: try simpler initialization\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m44\u001b[39m spark = \u001b[43mSparkSession\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbuilder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmaster\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mlocal[*]\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mappName\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mNugaBankETL\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgetOrCreate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     45\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mSpark session created with fallback method\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\ProgramData\\anaconda3\\envs\\pyspark_env\\Lib\\site-packages\\pyspark\\sql\\session.py:559\u001b[39m, in \u001b[36mSparkSession.Builder.getOrCreate\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    556\u001b[39m     sc = SparkContext.getOrCreate(sparkConf)\n\u001b[32m    557\u001b[39m     \u001b[38;5;66;03m# Do not update `SparkConf` for existing `SparkContext`, as it's shared\u001b[39;00m\n\u001b[32m    558\u001b[39m     \u001b[38;5;66;03m# by all sessions.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m559\u001b[39m     session = \u001b[43mSparkSession\u001b[49m\u001b[43m(\u001b[49m\u001b[43msc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptions\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_options\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    560\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    561\u001b[39m     module = SparkSession._get_j_spark_session_module(session._jvm)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\ProgramData\\anaconda3\\envs\\pyspark_env\\Lib\\site-packages\\pyspark\\sql\\session.py:635\u001b[39m, in \u001b[36mSparkSession.__init__\u001b[39m\u001b[34m(self, sparkContext, jsparkSession, options)\u001b[39m\n\u001b[32m    631\u001b[39m jSparkSessionModule = SparkSession._get_j_spark_session_module(\u001b[38;5;28mself\u001b[39m._jvm)\n\u001b[32m    633\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m jsparkSession \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    634\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[32m--> \u001b[39m\u001b[32m635\u001b[39m         \u001b[43mjSparkSessionClass\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgetDefaultSession\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m.isDefined()\n\u001b[32m    636\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m jSparkSessionClass.getDefaultSession().get().sparkContext().isStopped()\n\u001b[32m    637\u001b[39m     ):\n\u001b[32m    638\u001b[39m         jsparkSession = jSparkSessionClass.getDefaultSession().get()\n\u001b[32m    639\u001b[39m         jSparkSessionModule.applyModifiableSettings(jsparkSession, options)\n",
-      "\u001b[31mTypeError\u001b[39m: 'JavaPackage' object is not callable"
+      "Number of rows: 1000000\n"
      ]
     }
    ],
    "source": [
-    "# Initialize Spark Session with compatibility fix\n",
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "# Set environment variables for Spark\n",
-    "os.environ['PYSPARK_PYTHON'] = sys.executable\n",
-    "os.environ['PYSPARK_DRIVER_PYTHON'] = sys.executable\n",
-    "\n",
-    "# Try using findspark to locate Spark installation\n",
-    "try:\n",
-    "    import findspark\n",
-    "    findspark.init()\n",
-    "    print(\"findspark initialized successfully\")\n",
-    "except ImportError:\n",
-    "    print(\"findspark not available, proceeding without it\")\n",
-    "\n",
-    "from pyspark import SparkConf, SparkContext\n",
-    "from pyspark.sql import SparkSession\n",
-    "\n",
-    "# Stop any existing contexts\n",
-    "try:\n",
-    "    sc = SparkContext._active_spark_context\n",
-    "    if sc:\n",
-    "        sc.stop()\n",
-    "        print(\"Stopped existing Spark context\")\n",
-    "except:\n",
-    "    pass\n",
-    "\n",
-    "# Configure Spark with minimal settings\n",
-    "conf = SparkConf()\n",
-    "conf.setAppName('NugaBankETL')\n",
-    "conf.setMaster('local[*]')  # Use all available cores\n",
-    "conf.set(\"spark.sql.warehouse.dir\", \"file:///tmp/spark-warehouse\")\n",
-    "\n",
-    "# Create Spark session using SparkContext first\n",
-    "try:\n",
-    "    sc = SparkContext(conf=conf)\n",
-    "    spark = SparkSession(sc)\n",
-    "    print(f\"Spark version: {spark.version}\")\n",
-    "    print(\"Spark session created successfully!\")\n",
-    "except Exception as e:\n",
-    "    print(f\"Error creating Spark session: {e}\")\n",
-    "    # Fallback: try simpler initialization\n",
-    "    spark = SparkSession.builder.master('local[*]').appName('NugaBankETL').getOrCreate()\n",
-    "    print(\"Spark session created with fallback method\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59513eac",
-   "metadata": {},
-   "source": [
-    "## Data Extraction"
+    "# Number of rows \n",
+    "num_rows = nuga_bank_df.count()\n",
+    "print(f\"Number of rows: {num_rows}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f66ddcfa",
+   "execution_count": 23,
+   "id": "197ba34e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of columns: 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "#number of columns\n",
+    "num_columns = len(nuga_bank_df.columns)\n",
+    "print(f\"Number of columns: {num_columns}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "213f1ae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transaction_Date Nulls 0\n",
+      "Amount Nulls 0\n",
+      "Transaction_Type Nulls 0\n",
+      "Customer_Name Nulls 100425\n",
+      "Customer_Address Nulls 100087\n",
+      "Customer_City Nulls 100034\n",
+      "Customer_State Nulls 100009\n",
+      "Customer_Country Nulls 100672\n",
+      "Company Nulls 100295\n",
+      "Job_Title Nulls 99924\n",
+      "Email Nulls 100043\n",
+      "Phone_Number Nulls 100524\n",
+      "Credit_Card_Number Nulls 100085\n",
+      "IBAN Nulls 100300\n",
+      "Currency_Code Nulls 99342\n",
+      "Random_Number Nulls 99913\n",
+      "Category Nulls 100332\n",
+      "Group Nulls 100209\n",
+      "Is_Active Nulls 100259\n",
+      "Last_Updated Nulls 100321\n",
+      "Description Nulls 100403\n",
+      "Gender Nulls 99767\n",
+      "Marital_Status Nulls 99904\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checking for null values\n",
+    "for column in nuga_bank_df.columns:\n",
+    "    print(column, 'Nulls', nuga_bank_df.filter(nuga_bank_df[column].isNull()).count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "046a4f32",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# How to fill up missing values\n",
+    "nuga_bank_df_clean = nuga_bank_df.fillna({\n",
+    "    'Customer_Name':'Unknown',\n",
+    "    'Customer_Address':'Unknown',\n",
+    "    'Customer_City':'Unknown',\n",
+    "    'Customer_State':'Unknown',\n",
+    "    'Customer_Country':'Unknown',\n",
+    "    'Company':'Unknown',\n",
+    "    'Job_Title':'Unknown',\n",
+    "    'Email':'Unknown',\n",
+    "    'Phone_Number':'Unknown',\n",
+    "    'Credit_Card_Number':'0',\n",
+    "    'IBAN':'Unknown',\n",
+    "    'Currency_Code':'Unknown',\n",
+    "    'Random_Number':'0.0',\n",
+    "    'Category':'Unknown',\n",
+    "    'Group':'Unknown',\n",
+    "    'Is_Active':'Unknown',\n",
+    "    'Description':'Unknown',\n",
+    "    'Gender':'Unknown',\n",
+    "    'Marital_Status':'Unknown',\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6fc7d894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Drop rows where last_updated is null\n",
+    "nuga_bank_df_clean = nuga_bank_df_clean.dropna(subset=['Last_Updated'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4038ddca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transaction_Date Nulls 0\n",
+      "Amount Nulls 0\n",
+      "Transaction_Type Nulls 0\n",
+      "Customer_Name Nulls 0\n",
+      "Customer_Address Nulls 0\n",
+      "Customer_City Nulls 0\n",
+      "Customer_State Nulls 0\n",
+      "Customer_Country Nulls 0\n",
+      "Company Nulls 0\n",
+      "Job_Title Nulls 0\n",
+      "Email Nulls 0\n",
+      "Phone_Number Nulls 0\n",
+      "Credit_Card_Number Nulls 0\n",
+      "IBAN Nulls 0\n",
+      "Currency_Code Nulls 0\n",
+      "Random_Number Nulls 0\n",
+      "Category Nulls 0\n",
+      "Group Nulls 0\n",
+      "Is_Active Nulls 0\n",
+      "Last_Updated Nulls 0\n",
+      "Description Nulls 0\n",
+      "Gender Nulls 0\n",
+      "Marital_Status Nulls 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checking for null values\n",
+    "for column in nuga_bank_df_clean.columns:\n",
+    "    print(column, 'Nulls', nuga_bank_df_clean.filter(nuga_bank_df_clean[column].isNull()).count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "3bc37b36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows after cleaning: 899679\n"
+     ]
+    }
+   ],
+   "source": [
+    "#no of rows\n",
+    "num_rows = nuga_bank_df_clean.count()\n",
+    "print(f\"Number of rows after cleaning: {num_rows}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "53aba61d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------------+----------------+-------------+--------------------+-------------+--------------+----------------+-------------+------------------+-------------------+--------------------+--------------------+--------------------+-------------+------------------+--------+-------+---------+--------------------+-------+--------------+\n",
+      "|summary|            Amount|Transaction_Type|Customer_Name|    Customer_Address|Customer_City|Customer_State|Customer_Country|      Company|         Job_Title|              Email|        Phone_Number|  Credit_Card_Number|                IBAN|Currency_Code|     Random_Number|Category|  Group|Is_Active|         Description| Gender|Marital_Status|\n",
+      "+-------+------------------+----------------+-------------+--------------------+-------------+--------------+----------------+-------------+------------------+-------------------+--------------------+--------------------+--------------------+-------------+------------------+--------+-------+---------+--------------------+-------+--------------+\n",
+      "|  count|            899679|          899679|       899679|              899679|       899679|        899679|          899679|       899679|            899679|             899679|              899679|              899679|              899679|       899679|            899679|  899679| 899679|   899679|              899679| 899679|        899679|\n",
+      "|   mean|505.10367708927134|            NULL|         NULL|                NULL|         NULL|          NULL|            NULL|         NULL|              NULL|               NULL| 6.002851385999521E9|3.409662226750519E17|                NULL|         NULL| 4952.920380491264|    NULL|   NULL|     NULL|                NULL|   NULL|          NULL|\n",
+      "| stddev|  285.794534330047|            NULL|         NULL|                NULL|         NULL|          NULL|            NULL|         NULL|              NULL|               NULL|2.3068371038619423E9|1.189655005733002...|                NULL|         NULL|2966.5434011515995|    NULL|   NULL|     NULL|                NULL|   NULL|          NULL|\n",
+      "|    min|              10.0|         Deposit| Aaron Abbott|000 Aaron Landing...|    Aaronberg|       Alabama|     Afghanistan| Abbott Group|Academic librarian|            Unknown|       (200)201-4254|                   0|GB02AAAU191993009...|          AED|               0.0|       A|Unknown|       No|A American and to...| Female|      Divorced|\n",
+      "|    max|            1000.0|      Withdrawal|    Zoe Young|             Unknown|  Zunigaville|       Wyoming|        Zimbabwe|Zuniga-Wilson|      Youth worker|zzuniga@example.org|             Unknown| 4999984361512569455|             Unknown|          ZWD|            9999.0| Unknown|      Z|      Yes|Yourself young ev...|Unknown|       Unknown|\n",
+      "+-------+------------------+----------------+-------------+--------------------+-------------+--------------+----------------+-------------+------------------+-------------------+--------------------+--------------------+--------------------+-------------+------------------+--------+-------+---------+--------------------+-------+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To view the summary statistics of the data\n",
+    "nuga_bank_df_clean.describe().show()"
+   ]
   }
  ],
  "metadata": {
