--- a/notebook/nuga_bank_etl.ipynb
+++ b/notebook/nuga_bank_etl.ipynb
@@ -442,6 +442,49 @@
     "# To view the summary statistics of the data\n",
     "nuga_bank_df_clean.describe().show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c82c1266",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Transaction_Date',\n",
+       " 'Amount',\n",
+       " 'Transaction_Type',\n",
+       " 'Customer_Name',\n",
+       " 'Customer_Address',\n",
+       " 'Customer_City',\n",
+       " 'Customer_State',\n",
+       " 'Customer_Country',\n",
+       " 'Company',\n",
+       " 'Job_Title',\n",
+       " 'Email',\n",
+       " 'Phone_Number',\n",
+       " 'Credit_Card_Number',\n",
+       " 'IBAN',\n",
+       " 'Currency_Code',\n",
+       " 'Random_Number',\n",
+       " 'Category',\n",
+       " 'Group',\n",
+       " 'Is_Active',\n",
+       " 'Last_Updated',\n",
+       " 'Description',\n",
+       " 'Gender',\n",
+       " 'Marital_Status']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuga_bank_df_clean.columns"
+   ]
   }
  ],
  "metadata": {
