--- a/notebook/nuga_bank_etl.ipynb
+++ b/notebook/nuga_bank_etl.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "0e3e76a5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine\n"
+    "from sqlalchemy import create_engine\n",
+    "from pyspark.sql.functions import monotonically_increasing_id\n"
    ]
   },
   {
@@ -484,6 +485,300 @@
    ],
    "source": [
     "nuga_bank_df_clean.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "31a7468b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transaction Table\n",
+    "transaction =nuga_bank_df_clean.select(\n",
+    "    'Transaction_Date', 'Amount','Transaction_Type'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "7b74fc85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding the transactions ID column\n",
+    "transaction = transaction.withColumn('transaction_id', monotonically_increasing_id())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9e9f42f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reordering the columns\n",
+    "transaction = transaction.select('transaction_id', 'Transaction_Date', 'Amount', 'Transaction_Type')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "098f415c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+--------------------+------+----------------+\n",
+      "|transaction_id|    Transaction_Date|Amount|Transaction_Type|\n",
+      "+--------------+--------------------+------+----------------+\n",
+      "|             0|2024-03-23 15:38:...| 34.76|      Withdrawal|\n",
+      "|             1|2024-04-22 19:15:...|163.92|      Withdrawal|\n",
+      "|             2|2024-04-12 19:46:...|386.32|      Withdrawal|\n",
+      "|             3|2024-04-17 15:29:...|407.15|         Deposit|\n",
+      "|             4|2024-02-10 01:51:...|161.31|         Deposit|\n",
+      "|             5|2024-02-10 22:56:...|764.34|        Transfer|\n",
+      "|             6|2024-04-07 00:07:...|734.59|         Deposit|\n",
+      "|             7|2024-03-08 01:51:...|592.43|         Deposit|\n",
+      "|             8|2024-02-01 12:34:...| 927.1|         Deposit|\n",
+      "|             9|2024-03-22 16:46:...| 66.59|        Transfer|\n",
+      "|            10|2024-04-23 13:30:...| 246.3|      Withdrawal|\n",
+      "|            11|2024-01-13 01:22:...|782.32|      Withdrawal|\n",
+      "|            12|2024-02-25 15:16:...|818.42|      Withdrawal|\n",
+      "|            13|2024-01-01 20:55:...|352.23|      Withdrawal|\n",
+      "|            14|2024-01-19 00:01:...|316.19|      Withdrawal|\n",
+      "|            15|2024-04-09 14:40:...|662.26|      Withdrawal|\n",
+      "|            16|2024-04-15 04:58:...|893.73|         Deposit|\n",
+      "|            17|2024-04-12 14:32:...|746.22|      Withdrawal|\n",
+      "|            18|2024-02-26 14:43:...|214.77|      Withdrawal|\n",
+      "|            19|2024-01-17 14:50:...|726.94|      Withdrawal|\n",
+      "+--------------+--------------------+------+----------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "transaction.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "f3ccd5cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Customer Table\n",
+    "customer = nuga_bank_df_clean.select(\n",
+    "'Customer_Name', 'Customer_Address', 'Customer_City',\n",
+    "    'Customer_State', 'Customer_Country', 'Email',\n",
+    "    'Phone_Number'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4aaebde7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Add Id column\n",
+    "customer = customer.withColumn('customer_id', monotonically_increasing_id()).distinct()\n",
+    "\n",
+    "#reorder the table\n",
+    "customer = customer.select('customer_id', 'Customer_Name', 'Customer_Address', 'Customer_City',\n",
+    "    'Customer_State', 'Customer_Country', 'Email', 'Phone_Number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "c010abe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "899679"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "b40fdf20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----------------+--------------------+--------------------+--------------+--------------------+--------------------+--------------------+\n",
+      "|customer_id|    Customer_Name|    Customer_Address|       Customer_City|Customer_State|    Customer_Country|               Email|        Phone_Number|\n",
+      "+-----------+-----------------+--------------------+--------------------+--------------+--------------------+--------------------+--------------------+\n",
+      "|        176|Jonathan Williams|     429 Allen Shore|           Jamesside|  South Dakota|             Unknown|martinbrown@examp...|             Unknown|\n",
+      "|        310|     Jessica Dunn|70041 Tapia Vista...|          New Amanda|       Wyoming|              Angola|   hmora@example.com|001-713-202-8704x219|\n",
+      "|        639|     Jose Terrell| 152 Collins Landing|   North Charlesport|       Unknown|            Maldives|victoriamoore@exa...|    001-679-739-9215|\n",
+      "|       1009|     Holly Fisher|          872 Le Rue|      Lake Alexander|      Nebraska|             Unknown|anthony05@example...|+1-401-821-5608x0...|\n",
+      "|       1164|          Unknown|   1367 Ramirez Dale|          West Sarah|     Minnesota|Falkland Islands ...|turnersarah@examp...|    341-393-7906x985|\n",
+      "|       1259|Jennifer Benjamin|854 Cortez Ridges...|           Jamestown| West Virginia|              Malawi|piercesarah@examp...|     +1-602-758-9098|\n",
+      "|       1311|   Phillip Holmes|4187 Lisa Viaduct...|   South Staceyville|     Tennessee|Bosnia and Herzeg...|woodheather@examp...|001-394-389-4134x...|\n",
+      "|       1490|        Tina Ford|  101 Arellano Ferry|Lake Christophers...|      Colorado|   Brunei Darussalam|nicolecook@exampl...|+1-446-650-8065x1925|\n",
+      "|       1507|       Dustin May|434 Stuart Fort A...|          East Karen|      Illinois|                Guam|robert34@example.net|001-283-736-9996x...|\n",
+      "|       2072|  Cheyenne Powell|3675 James Junctions|         East Andrew|      Nebraska|Saint Vincent and...|tiffany87@example...|    363.912.9851x531|\n",
+      "|       2290|     Alan Andrews|2382 Aaron Key Ap...|             Unknown|        Kansas|               Benin|grahambrian@examp...|+1-308-982-8783x4...|\n",
+      "|       2343|      Maria Weeks|  341 Samuel Station|          Suttontown|         Maine|           Lithuania|   sdiaz@example.net|        661.463.2777|\n",
+      "|       3609|    Sheila Miller|5558 Mitchell Loo...|   Port Patriciatown|  South Dakota|      Czech Republic|william05@example...|        514.549.3653|\n",
+      "|       3993|  Cynthia Farrell|     353 Cindy Inlet|          Butlerberg|  North Dakota|Central African R...|   lkane@example.com|       (950)865-4626|\n",
+      "|       4199|      Carlos West|             Unknown|          Burnshaven|        Hawaii|              Turkey| keith69@example.net|          3889922381|\n",
+      "|       4295|     Joy Williams|69318 Copeland Po...|   New Rodneyborough|       Wyoming|               Korea|wcochran@example.net|        495.727.6425|\n",
+      "|       4339| Elizabeth Monroe| 613 Nathaniel Mills|     North Mistyview|      New York|            Dominica|             Unknown|       (475)585-5044|\n",
+      "|       4353|     Michael King|  3206 Nicholas Path|          Floresberg|      Maryland|              Monaco| wbarnes@example.com|  974.979.4946x34925|\n",
+      "|       4724|          Unknown|934 Merritt Exten...|             Unknown|          Utah|            Honduras|williamschristoph...|          6373446428|\n",
+      "|       4931|   Melissa Taylor|     830 Robert Pike|     Calderonborough|  South Dakota|             Ireland|  cody50@example.com|    001-562-887-2252|\n",
+      "+-----------+-----------------+--------------------+--------------------+--------------+--------------------+--------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "customer.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "5fe86061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Employee Table\n",
+    "employee = nuga_bank_df_clean.select(\n",
+    "'Company','Job_Title', 'Gender', 'Marital_Status'\n",
+    ")\n",
+    "\n",
+    "#Add Id column\n",
+    "employee = employee.withColumn('employee_id', monotonically_increasing_id()).distinct()\n",
+    "\n",
+    "#reorder the table\n",
+    "employee = employee.select('employee_id', 'Company','Job_Title', 'Gender', 'Marital_Status')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "9ed6cf35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+--------------------+--------------------+-------+--------------+\n",
+      "|employee_id|             Company|           Job_Title| Gender|Marital_Status|\n",
+      "+-----------+--------------------+--------------------+-------+--------------+\n",
+      "|        260|Thomas, Graham an...|Civil Service fas...|   Male|       Married|\n",
+      "|        313|Booth, Cook and B...|             Unknown|Unknown|        Single|\n",
+      "|        553|             Unknown|Primary school te...|   Male|        Single|\n",
+      "|        665|Novak, Baker and Lee|         Media buyer|  Other|       Unknown|\n",
+      "|        839|       Henderson LLC|Civil engineer, c...| Female|      Divorced|\n",
+      "|       1009|Schultz, Contrera...|   Market researcher| Female|       Married|\n",
+      "|       1146|             Unknown|    Financial trader|   Male|        Single|\n",
+      "|       1184|             Unknown|  Furniture designer| Female|        Single|\n",
+      "|       1356|      Collins-Powell|       Social worker| Female|      Divorced|\n",
+      "|       1430|        Ramsey Group|Scientific labora...|   Male|      Divorced|\n",
+      "|       1907|Wright, Jenkins a...|Medical laborator...|  Other|       Married|\n",
+      "|       2588|Wells, Gibson and...|     Ophthalmologist|  Other|        Single|\n",
+      "|       2764|           Carey LLC|Scientist, resear...|  Other|       Unknown|\n",
+      "|       2834|      Villarreal PLC| Art gallery manager| Female|        Single|\n",
+      "|       3000|         Stone-Smith|            Musician| Female|        Single|\n",
+      "|       3269|Vang, Rios and Ra...| Trade mark attorney|   Male|        Single|\n",
+      "|       3315|           Ware-King|    Graphic designer| Female|        Single|\n",
+      "|       3765|      Nichols-Monroe|           Press sub|Unknown|       Unknown|\n",
+      "|       3986|Floyd, Shields an...|Designer, ceramic...|   Male|        Single|\n",
+      "|       4218|    Marshall-Navarro|Operational resea...|  Other|        Single|\n",
+      "+-----------+--------------------+--------------------+-------+--------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employee.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "52beae59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fact Table\n",
+    "fact_table =nuga_bank_df_clean.join(customer, ['Customer_Name', 'Customer_Address', 'Customer_City',\n",
+    "    'Customer_State', 'Customer_Country', 'Email', 'Phone_Number'], 'left') \\\n",
+    "        .join(transaction, ['Transaction_Date', 'Amount', 'Transaction_Type'], 'left') \\\n",
+    "        .join(employee, ['Company','Job_Title', 'Gender', 'Marital_Status'], 'left') \\\n",
+    "            .select('transaction_id', 'customer_id', 'employee_id', 'Transaction_Date', \\\n",
+    " 'Credit_Card_Number', 'IBAN', 'Currency_Code', 'Random_Number', 'Category', 'Group', \\\n",
+    " 'Is_Active', 'Last_Updated', 'Description',)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "94577c27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+-----------+-----------+--------------------+------------------+--------------------+-------------+-------------+--------+-----+---------+--------------------+--------------------+\n",
+      "|transaction_id|customer_id|employee_id|    Transaction_Date|Credit_Card_Number|                IBAN|Currency_Code|Random_Number|Category|Group|Is_Active|        Last_Updated|         Description|\n",
+      "+--------------+-----------+-----------+--------------------+------------------+--------------------+-------------+-------------+--------+-----+---------+--------------------+--------------------+\n",
+      "|    8589934597| 8589934597| 8589934597|2024-03-12 14:08:...|      630428157006|GB86GLHT381589496...|      Unknown|       5000.0|       A|    Z|       No|2023-10-14 00:47:...|Everything decade...|\n",
+      "|   25769803791|25769803791|25769803791|2024-01-08 00:20:...|    38082745081301|             Unknown|          DJF|          0.0|       A|    Z|      Yes|2021-05-24 05:28:...|Into because end....|\n",
+      "|   17179869188|17179869188|17179869188|2024-03-04 03:11:...|     4021800082481|GB78UBAH195883770...|          LBP|       8097.0|       C|    X|      Yes|2023-07-11 06:06:...|Maybe teacher dee...|\n",
+      "|   42949672965|42949672965|42949672965|2024-01-02 15:41:...|    30448552436896|             Unknown|          ISK|       1108.0|       A|    Y|       No|2022-12-06 03:53:...|Wrong part rest c...|\n",
+      "|   17179869184|17179869184|17179869184|2024-02-23 11:54:...|   213133896337542|GB07IUUE487965913...|          ISK|          0.0|       D|    Y|       No|2023-08-16 10:32:...|Themselves make ago.|\n",
+      "|   60129542154|60129542154|60129542154|2024-03-20 15:24:...|  3542448933285876|GB22VSFS474270337...|      Unknown|       6216.0|       A|    X|       No|2020-08-05 03:15:...|Meet PM worry who...|\n",
+      "|   42949672978|42949672978|42949672978|2024-01-14 10:43:...|   213106153459068|             Unknown|      Unknown|       7296.0|       B|    Z|      Yes|2022-04-10 16:15:...|Surface among tru...|\n",
+      "|            20|         20|         20|2024-03-05 23:45:...|   213186454811670|GB77SPMZ984195063...|          SOS|       7610.0|       C|    X|       No|2021-04-15 13:30:...|Concern remember ...|\n",
+      "|   17179869193|17179869193|17179869193|2024-02-04 03:04:...|  6011177559558424|GB76DNER497098023...|          BZD|       6499.0|       D|    X|  Unknown|2020-02-09 13:11:...|Risk take recent ...|\n",
+      "|   51539607566|51539607566|51539607566|2024-01-22 22:32:...|  6574717409681808|GB58ZWIH992989778...|          LSL|          0.0|       B|    Y|       No|2021-11-04 10:41:...|Any state recogni...|\n",
+      "|   34359738381|34359738381|34359738381|2024-02-14 23:06:...|      639006216746|GB81CQQR004909975...|      Unknown|       8199.0|       B|    Y|       No|2024-03-31 18:51:...|Try step sound. B...|\n",
+      "|   25769803788|25769803788|25769803788|2024-02-24 20:52:...|  2277452848592163|GB36UBKI615026373...|          ARS|       3608.0|       D|    Z|      Yes|2020-08-08 08:43:...|Game fund start w...|\n",
+      "|   60129542144|60129542144|60129542144|2024-01-05 19:35:...|   345333404165465|GB96PUDP643655555...|          DJF|       3059.0|       B|    Z|      Yes|2022-07-22 21:01:...|Really conference...|\n",
+      "|   42949672980|42949672980|42949672980|2024-04-19 05:04:...|  6507797348788197|GB31LUCU530383937...|          IRR|       5852.0|       D|    Y|       No|2024-03-09 12:39:...|     Dog peace fish.|\n",
+      "|   25769803778|25769803778|25769803778|2024-01-01 00:11:...|  6011797984315254|GB87DZWW815695630...|          SRD|       9451.0|       D|    Z|      Yes|2021-12-31 10:31:...|Whom painting nat...|\n",
+      "|   51539607565|51539607565|17179893948|2024-01-09 13:31:...|  6011153251503935|GB28FTRX421798999...|          CHF|       1792.0|       C|    Z|      Yes|2020-07-14 19:25:...|Compare sell bank...|\n",
+      "|   51539607565|51539607565|17179935849|2024-01-09 13:31:...|  6011153251503935|GB28FTRX421798999...|          CHF|       1792.0|       C|    Z|      Yes|2020-07-14 19:25:...|Compare sell bank...|\n",
+      "|   51539607565|51539607565|51539607565|2024-01-09 13:31:...|  6011153251503935|GB28FTRX421798999...|          CHF|       1792.0|       C|    Z|      Yes|2020-07-14 19:25:...|Compare sell bank...|\n",
+      "|   25769803785|25769803785|25769803785|2024-02-09 08:43:...|  6011487394633278|GB21YRPY294696766...|          PAB|       3368.0|       C|    X|       No|2023-07-31 12:32:...|Enter ask remembe...|\n",
+      "|   34359738382|34359738382|34359738382|2024-03-06 00:03:...|   180067592769732|GB92JVMY004197871...|          EGP|       7198.0|       A|    Z|      Yes|2023-10-12 22:25:...|Before story prof...|\n",
+      "+--------------+-----------+-----------+--------------------+------------------+--------------------+-------------+-------------+--------+-----+---------+--------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "fact_table.show()"
    ]
   }
  ],
