--- a/notebook/nuga_bank_etl.ipynb
+++ b/notebook/nuga_bank_etl.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "0e3e76a5",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://host.docker.internal:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -64,7 +64,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x2706ae6ffd0>"
+       "<pyspark.sql.session.SparkSession at 0x23b7cafc3d0>"
       ]
      },
      "execution_count": 3,
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "bffb8bf7",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "ed043ebc",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "c66d849f",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "f66ddcfa",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        " 'Marital_Status']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5b8926bc",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "197ba34e",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "213f1ae1",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "046a4f32",
    "metadata": {},
    "outputs": [],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "6fc7d894",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "4038ddca",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "3bc37b36",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "53aba61d",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "c82c1266",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
        " 'Marital_Status']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "31a7468b",
    "metadata": {},
    "outputs": [],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "7b74fc85",
    "metadata": {},
    "outputs": [],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "9e9f42f0",
    "metadata": {},
    "outputs": [],
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "098f415c",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "f3ccd5cc",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "id": "4aaebde7",
    "metadata": {},
    "outputs": [],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "id": "c010abe4",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "899679"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "b40fdf20",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "id": "5fe86061",
    "metadata": {},
    "outputs": [],
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "id": "9ed6cf35",
    "metadata": {},
    "outputs": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "id": "52beae59",
    "metadata": {},
    "outputs": [],
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "id": "94577c27",
    "metadata": {},
    "outputs": [
@@ -779,6 +779,185 @@
    ],
    "source": [
     "fact_table.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4be142a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Outputing the transformed data to parquet files\n",
+    "# transaction.write.mode('overwrite').parquet(r'nuga_bank_spark_etl/dataset/transaction')\n",
+    "# customer.write.mode('overwrite').parquet(r'nuga_bank_spark_etl/dataset/customer')\n",
+    "# employee.write.mode('overwrite').parquet(r'nuga_bank_spark_etl/dataset/employee')\n",
+    "# fact_table.write.mode('overwrite').parquet(r'nuga_bank_spark_etl/dataset/fact_table')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56be3463",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convert Spark DataFrames to Pandas DataFrames => This is too large for the memory of the machine\n",
+    "# transaction_pd_df = transaction.toPandas()\n",
+    "# customer_pd_df = customer.toPandas()\n",
+    "# employee_pd_df = employee.toPandas()\n",
+    "# fact_table_pd_df = fact_table.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "31c891cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert Spark DataFrames to Pandas DataFrames (limited to 5000 rows)\n",
+    "transaction_pd_df = transaction.limit(5000).toPandas()\n",
+    "customer_pd_df = customer.limit(5000).toPandas()\n",
+    "employee_pd_df = employee.limit(5000).toPandas()\n",
+    "fact_table_pd_df = fact_table.limit(5000).toPandas()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f14ea2d6",
+   "metadata": {},
+   "source": [
+    "### Data Loading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c9114f92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "7fec64a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Loading data into PostgreSQL tables...\n",
+      "✅ Transaction table loaded: 5,000 rows\n",
+      "✅ Transaction table loaded: 5,000 rows\n",
+      "✅ Customer table loaded: 5,000 rows\n",
+      "✅ Customer table loaded: 5,000 rows\n",
+      "✅ Employee table loaded: 5,000 rows\n",
+      "✅ Employee table loaded: 5,000 rows\n",
+      "✅ Fact table loaded: 5,000 rows\n",
+      "\n",
+      "🎉 Data successfully saved to PostgreSQL database!\n",
+      "✅ Fact table loaded: 5,000 rows\n",
+      "\n",
+      "🎉 Data successfully saved to PostgreSQL database!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Save to PostgreSQL\n",
+    "import psycopg2\n",
+    "import os\n",
+    "from sqlalchemy import create_engine\n",
+    "from dotenv import load_dotenv\n",
+    "from urllib.parse import quote_plus\n",
+    "\n",
+    "# PostgreSQL credentials\n",
+    "load_dotenv()\n",
+    "DB_HOST = os.getenv('DB_HOST')\n",
+    "DB_PORT = os.getenv('DB_PORT')\n",
+    "DB_NAME = os.getenv('DB_NAME')\n",
+    "DB_USER = os.getenv('DB_USER') or 'postgres'  # fallback to 'postgres' if not set\n",
+    "DB_PASSWORD = os.getenv('DB_PASSWORD')\n",
+    "\n",
+    "# URL-encode the password to handle special characters like '@'\n",
+    "DB_PASSWORD_ENC = quote_plus(DB_PASSWORD)\n",
+    "\n",
+    "\n",
+    "# Create connection to PostgreSQL using SQLAlchemy engine\n",
+    "db_url = f'postgresql://{DB_USER}:{DB_PASSWORD_ENC}@{DB_HOST}:{DB_PORT}/{DB_NAME}'\n",
+    "engine = create_engine(db_url)\n",
+    "\n",
+    "# Save DataFrames to PostgreSQL database\n",
+    "print(\"📊 Loading data into PostgreSQL tables...\")\n",
+    "        \n",
+    "transaction_pd_df.to_sql('transaction', engine, index=False, if_exists='replace')\n",
+    "print(f\"✅ Transaction table loaded: {len(transaction_pd_df):,} rows\")\n",
+    "        \n",
+    "customer_pd_df.to_sql('customer', engine, index=False, if_exists='replace')\n",
+    "print(f\"✅ Customer table loaded: {len(customer_pd_df):,} rows\")\n",
+    "        \n",
+    "employee_pd_df.to_sql('employee', engine, index=False, if_exists='replace')\n",
+    "print(f\"✅ Employee table loaded: {len(employee_pd_df):,} rows\")\n",
+    "        \n",
+    "fact_table_pd_df.to_sql('fact_table', engine, index=False, if_exists='replace')\n",
+    "print(f\"✅ Fact table loaded: {len(fact_table_pd_df):,} rows\")\n",
+    "    \n",
+    "print(\"\\n🎉 Data successfully saved to PostgreSQL database!\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "604d1644",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Data exported to CSV files in '../data/' directory\n",
+      "\n",
+      "📋 csv loading process completed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load to CSV\n",
+    "import os\n",
+    "try:\n",
+    "    # Create output directory for CSV files (one level up from notebook)\n",
+    "    output_dir = \"../data\"\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "    # Export DataFrames to CSV files as backup\n",
+    "    transaction_pd_df.to_csv(f'{output_dir}/transaction_table.csv', index=False)\n",
+    "    customer_pd_df.to_csv(f'{output_dir}/customer_table.csv', index=False)\n",
+    "    employee_pd_df.to_csv(f'{output_dir}/employee_table.csv', index=False)\n",
+    "    fact_table_pd_df.to_csv(f'{output_dir}/fact_table.csv', index=False)\n",
+    "\n",
+    "    print(f\"✅ Data exported to CSV files in '{output_dir}/' directory\")\n",
+    "\n",
+    "except Exception as csv_error:\n",
+    "    print(f\"CSV backup also failed: {csv_error}\")\n",
+    "\n",
+    "print(\"\\n📋 csv loading process completed.\")"
    ]
   }
  ],
